--- a/svt/build.gradle
+++ b/svt/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'com.foodmap'
+group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -20,6 +20,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+	implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '3.2.0'
+	
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
