--- a/svt/src/main/resources/application.properties
+++ b/svt/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.mysql.main.driver-class-name = net.sf.log4jdbc.sql.jdbcapi.Dri
 spring.datasource.mysql.main.jdbc-url=${mysql_main_url}
 spring.datasource.mysql.main.username=${mysql_main_username}
 spring.datasource.mysql.main.password=${mysql_main_password}
+
+
+#mybatis.type-aliases-package=com.foodmap.common.base, com.foodmap.infra.*
